// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts animation test suite "EmptyList" should match snapshot 1`] = `
.c0 {
  color: rgba(0,0,0,.54);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c1 {
  text-align: center;
  padding-top: 80px;
}

<div
  className="c0"
>
  <a
    href="/tests"
    onClick={[Function]}
  >
    <p
      className="c1"
    >
      hello world
    </p>
  </a>
  <div>
    <p>
      hello
    </p>
    <p>
      world
    </p>
  </div>
</div>
`;

exports[`layouts animation test suite "ListWrapper" should match snapshot 1`] = `
.c0 {
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100vw;
  max-width: 460px;
  min-height: calc(100vh - 50px);
  padding-bottom: 70px;
}

<div
  className="c0"
>
  <div>
    <p>
      hello
    </p>
    <p>
      world
    </p>
  </div>
</div>
`;

exports[`layouts animation test suite "PageLayout" should match snapshot 1`] = `
.c0 {
  background-color: #f3e5f5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: top;
  -webkit-justify-content: top;
  -ms-flex-pack: top;
  justify-content: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 50px;
  border: none;
  width: 100vw;
  min-height: 100vh;
}

<div
  className="c0"
>
  <div>
    <p>
      hello
    </p>
    <p>
      world
    </p>
  </div>
</div>
`;
